Missed some deprecated newInstance calls